fix image stretcheed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,9 +42,14 @@ body {
     opacity: 0.2;
 }
 
-#section1-background-img, #section4-background-img {
+#section1-background-img {
     height: 100vh;
     width: 100vw;
+}
+
+#section4-background-img {
+    height: 120vh;
+    width: auto;
 }
 
 .nav-link {
